--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "better-sqlite3": "^12.2.0",
     "docus": "latest",
     "eslint": "^9.39.2",
-    "nuxt": "^4.1.2"
+    "nuxt": "^4.1.2",
+    "nuxt-studio": "1.0.0-beta.3"
   }
 }
