--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "better-sqlite3": "^12.2.0",
     "docus": "latest",
     "eslint": "^9.39.2",
+    "konva": "^10.2.0",
     "nuxt": "^4.1.2",
-    "nuxt-studio": "1.0.0-beta.3"
+    "nuxt-studio": "1.0.0-beta.3",
+    "vue-konva": "^3.3.0"
   }
 }
