--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "build": "nuxt build --extends docus"
   },
   "dependencies": {
+    "@nuxt/content": "^3.11.2",
     "@nuxt/eslint": "1.12.1",
     "@nuxt/fonts": "0.12.1",
     "@nuxt/hints": "1.0.0-alpha.5",
@@ -18,7 +19,7 @@
     "eslint": "^9.39.2",
     "konva": "^10.2.0",
     "nuxt": "^4.1.2",
-    "nuxt-studio": "1.0.0-beta.3",
+    "nuxt-studio": "1.2.0",
     "vue-konva": "^3.3.0"
   }
 }
